Negative top margin on lists within a post

--- a/static/css/redlounge.css
+++ b/static/css/redlounge.css
@@ -59,6 +59,14 @@ h1 {
 	background: #eee;
 }
 
+.post ol, ul {
+    margin-top: -1.5rem;
+}
+
+.footnotes ol, ul {
+    margin-top: 0rem;
+}
+
 /* Layout */
 .pure-img-responsive {
     max-width: 100%;
